<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@android:color/holo_orange_light"
    tools:context="com.bentechapps.konduckitor.activity.fragments.GamePlayPauseFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textColor="@color/black_overlay"
        android:layout_span="2"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/music"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:id="@+id/music_switch"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sfx"
        android:id="@+id/textView6"
        android:layout_below="@+id/music_switch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:id="@+id/sfx_switch"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameplay"
        android:textColor="@color/black_overlay"
        android:layout_span="2"
        android:id="@+id/gamePlay"
        android:layout_below="@+id/customView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/power_up"
        android:id="@+id/defaultLabel"
        android:layout_below="@+id/gamePlay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:dropDownSelector="@color/black"
        android:id="@+id/default_power_up_spinner"
        android:layout_below="@+id/defaultLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/customView"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="@color/black_overlay"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">


        <Button
            android:background="@drawable/global_button_background_selector"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:text="@string/resume_game"
            android:layout_marginRight="10dp"
            android:id="@+id/resumeGameButton" />

        <Button
            android:background="@drawable/global_button_background_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:id="@+id/homeButton" />

        <Button
            android:background="@drawable/global_button_background_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_tutorial"
            android:padding="5dp"
            android:id="@+id/skipTutorial" />
    </LinearLayout>


</RelativeLayout>
