<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@android:color/holo_orange_light"
    tools:context="com.bentechapps.konduckitor.activity.fragments.HomePageFragement">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="?android:attr/buttonStyle"
        android:background="@drawable/global_button_background_selector"
        android:src="@android:drawable/ic_menu_help"
        android:id="@+id/help"
        android:contentDescription="@string/help" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="?android:attr/buttonStyle"
        android:layout_marginRight="10dp"
        android:background="@drawable/global_button_background_selector"
        android:src="@android:drawable/ic_menu_preferences"
        android:layout_toLeftOf="@id/help"
        android:layout_toStartOf="@id/help"
        android:id="@+id/settings"
        android:contentDescription="@string/preferences" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/global_button_background_selector"
        android:src="@android:drawable/ic_lock_silent_mode_off"
        style="?android:attr/buttonStyle"
        android:layout_toLeftOf="@id/settings"
        android:layout_toStartOf="@id/settings"
        android:id="@+id/silent_mode"
        android:contentDescription="@string/silent_mode" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="30sp"
        style="?android:attr/buttonStyle"
        android:background="@drawable/global_button_background_selector"
        android:textColor="@android:color/white"
        android:text="@string/play"
        android:id="@+id/play_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shopButton"
            android:padding="5dp"
            android:background="@drawable/global_button_background_selector"
            android:textColor="@color/white"
            android:drawableLeft="@android:drawable/star_big_on"
            android:drawableStart="@android:drawable/star_big_on"
            android:layout_marginRight="10dp"
            android:text="@string/shop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="300"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/reputationTextView" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reputation"
        android:textColor="@color/black_overlay"
        android:id="@+id/textView8"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/highscore"
        android:textColor="@color/black_overlay"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="40000"
        android:id="@+id/highScoreTextView"
        android:layout_gravity="start|top"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView9"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:fontFamily="sans-serif-thin"
        android:layout_above="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/challenge_message"
        android:id="@+id/textView10"
        android:textColor="@color/black_overlay"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />

</RelativeLayout>

