<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.bentechapps.konduckitor.activity.fragments.GameOverFragment">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-thin"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_over"
            android:textSize="40sp"
            android:layout_marginBottom="15dp"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_overlay"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/run_time"
            android:id="@+id/runTimeLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="10:32"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:id="@+id/runTimeTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_overlay"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/score"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="490"
            android:id="@+id/scoreTextView"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_overlay"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/reputation"
            android:id="@+id/rewardLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="540"
            android:textColor="@color/black"
            android:id="@+id/reputationTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_overlay"
            android:padding="4dp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Your eye sharp well wellds! This text view is the view that will contain comments about the way the game was played"
            android:id="@+id/commentTextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Replay"
            android:id="@+id/replayButton"
            android:background="@drawable/global_button_background_selector"
            android:textColor="@color/white"
            android:layout_marginRight="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/linearLayout" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:background="@drawable/global_button_background_selector"
            android:textColor="@color/white"
            android:id="@+id/homeButton"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/replayButton"
            android:layout_toRightOf="@+id/replayButton"
            android:layout_toEndOf="@+id/replayButton" />
    </LinearLayout>


</RelativeLayout>
